--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -94,7 +94,7 @@ body {
   }
 }
 
-.downvote, .upvote {
+.downvote, .upvote, .checkbox-inline {
   cursor:pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
