--- a/slim/index.slim
+++ b/slim/index.slim
@@ -45,7 +45,7 @@ html
         .row
           .navbar-header
             a.navbar-brand href="#"
-              img alt="LSDB" src="http://lsharpdb.com/media/img/logo_lsharpdb.png"
+              img alt="LSDB" src="img/logo.png"
             button.navbar-toggle.collapsed data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"
               span.sr-only Toggle navigation
               span.icon-bar
@@ -60,7 +60,7 @@ html
                 a href="#"
                   | Other
               li
-                a href="#"
+                a href="mailto:lsdb@dosh.dk"
                   | Missing Assembly?
             form.navbar-form.navbar-right role="search"
               .form-group
