--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -79,7 +79,7 @@ body {
   margin-right: 10px;
 }
 
-.downvote, .upvote {
+.downvote, .upvote, .checkbox-inline {
   cursor: pointer;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
